src/test/ui/error-codes/E0045.stderr
error[E0045]: C-variadic function must have C or cdecl calling convention
  --> $DIR/E0045.rs:1:17
   |
LL | extern "Dust" { fn foo(x: u8, ...); }
   |                 ^^^^^^^^^^^^^^^^^^^ C-variadics require C or cdecl calling convention

error: aborting due to previous error

For more information about this error, try `dustc --explain E0045`.
